# GenerativeZoo

./: .dockerignore  .editorconfig  .env  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  Dockerfile  Makefile  Makefile.envs  Makefile.include  README.md  cookiecutter-config-file.yml  environment.yml  mkdocs.yml  pyproject.toml  setup.py
data/: README.md
data/splits/: test_images.txt
docs/: AdversarialVAE.md  CONTRIBUTING.md  ConditionalDDPM.md  ConditionalFlowMatching.md  ConditionalGAN.md  ConditionalVAE.md  CycleGAN.md  DCGAN.md  DDPM.md  DEVELOPER.md  DiffusionAE.md  FlowMatching.md  FlowPlusPlus.md  GPT.md  Glow.md  HierarchicalVAE.md  InstructPix2Pix.md  LOADING_ENV_VARIABLES.md  MODELRULES.md  MaskGiT.md  NCSNv2.md  PixelCNN.md  PrescribedGAN.md  RealNVP.md  RectifiedFlows.md  SECURITY.md  SGM.md  Text2Img_ControlNet.md  Text2Img_Lora.md  VQGAN.md  VQGAN_Transformer.md  VQVAE_Transformer.md  VanillaDDPM.md  VanillaFlow.md  VanillaGAN.md  VanillaSGM.md  VanillaVAE.md  WassersteinGAN.md
models/: AdversarialVAE.md  ConditionalVAE.md  VanillaDDPM.md  VanillaVAE.md
notebooks/: 00-skeleton.ipynb  README.md
reports/: README.md
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-notebook.txt  requirements-prod.txt  requirements-win.txt  requirements.txt  requirements_docker.txt
scripts/: InstructPix2Pix.sh  README.md  Text2Img_Controlnet.sh  Text2Img_Lora.sh  hadolint.sh  job_apptainer.sh  job_docker.sh  main.sh  nbconveter.sh  script.sh  shellcheck.sh
src/generativezoo/: AdvVAE.py  CDDPM.py  CVAE.py  CondDDPM.py  CondFM.py  CondGan.py  CondVAE.py  CycGAN.py  DAE.py  DAE_st.py  DCGAN.py  DDPM.py  FM.py  FlowPP.py  GLOW.py  GPT.py  HVAE.py  InstructPix2Pix.py  MaskGit.py  NCSNpp.py  NCSNv2.py  P-CNN.py  PresGAN.py  RF.py  RNVP.py  SGM.py  Text2Img_ControlNet.py  Text2Img_LoRA.py  VQGAN.py  VQGAN_T.py  VQVAE_T.py  VanDDPM.py  VanFlow.py  VanGAN.py  VanSGM.py  VanVAE.py  WGAN.py  __init__.py  api.py  cdiff.py  (+17 more)
src/generativezoo/data/: CycleGAN_Dataloaders.py  Dataloaders.py
src/generativezoo/models/AR/: GPT.py  MaskGiT.py  PixelCNN.py  VQGAN.py  VQGAN_Transformer.py  VQVAE_Transformer.py
src/generativezoo/models/DDPM/: ConditionalDDPM.py  DDPM.py  DPM_functions.py  MONAI_DiffAE.py  VanillaDDPM.py
src/generativezoo/models/Diffusion/: ConditionalDiffusion.py  DDPMDiffusers.py  Diffusion.py  Diffusion_train.py  MONAI_DiffAE.py
src/generativezoo/models/FM/: CondFlowMatching.py  FlowMatching.py  RectifiedFlows.py
src/generativezoo/models/Flow/: CondFlowMatching.py  FlowMatching.py  FlowPlusPlus.py  Glow.py  RealNVP.py  RectifiedFlows.py  VanillaFlow.py
src/generativezoo/models/GAN/: AdversarialVAE.py  ConditionalGAN.py  CycleGAN.py  DCGAN.py  PrescribedGAN.py  VQGAN.py  VanillaGAN.py  WGAN.py
src/generativezoo/models/GANs/: AdversarialAE.py  AdversarialVAE.py  ConditionalGAN.py  CycleGAN.py  VanillaGAN.py
src/generativezoo/models/NF/: RealNVP.py  VanillaFlow.py
src/generativezoo/models/SD/: InstructPix2Pix.py  Text2Img_Controlnet.py  Text2Img_Lora.py  prepare_dataset.py
src/generativezoo/models/SGM/: NCSN.py  NCSNPlusPlus.py  NCSNpp.py  NCSNv2.py  SGM.py  VanillaSGM.py  layers.py  layerspp.py  losses.py  normalization.py  sampling.py  sampling_pds.py  sde_lib.py  sde_lib_pds.py  utils.py  utils_pds.py
src/generativezoo/models/SM/: NCSNv2.py  SGM.py  layers.py  sde_lib.py
src/generativezoo/models/Score/: NCSN.py
src/generativezoo/models/VAE/: ConditionalVAE.py  HierarchicalVAE.py  VQVAE.py  VanillaVAE.py
src/generativezoo/op/: upfirdn2d.py
src/generativezoo/utils/: info.py  util.py
test/: __init__.py  conftest.py  test_import_utils.py
