# vscode-python-2020.7.0 automatically loads if this file is present.
# https://github.com/microsoft/vscode-python/blob/master/CHANGELOG.md#enhancements-1
[tool.poetry]
name = "GenerativeZoo"
version = "0.0.0"
description = "A short description of the project. No quotes."
authors = ["None <none@none.pt>"]
readme = "README.md"
license = "No license"

[tool.black]
line-length = 120
color = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
      \.egg
    | \.eggs
    | \.git
    | \.hg
    | \.dvc
    | \.mypy_cache
    | \.pytest_cache
    | \.nox
    | \.tox
    | \.venv
    | \.venv-docs
    | \.venv-dev
    | \.venv-note
    | \.venv-dempy
    | _build
    | build
    | dist
    | setup.py
)
'''

# `isort` configurations
[tool.isort]
# https://github.com/timothycrosley/isort
py_version = 39
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip_gitignore = true
color_output = true
#known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]

# `coverage` configurations
[tool.coverage.run]
source = ["src/generativezoo"]
branch = true
command_line = '-m pytest'

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise AssertionError",
]
show_missing = true
ignore_errors = true
skip_covered = true
#fail_under = 100
#precision = 1
omit = [
  "test/*",
  ".venv*",
]

# `pytest` configurations
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-vv", "--doctest-modules"]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = ["test"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
python_version = 3.9
pretty = true
show_traceback = true
color_output = true
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.vulture]
paths = ["src"]
min_confidence = 65

[tool.pydocstyle]
convention = "google"
#ignore = "D205,D415"

[tool.interrogate]
# https://github.com/econchick/interrogate#configuration
ignore-init-method = true
fail-under = 95
color = true
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0
quiet = false
exclude = ["setup.py", "docs", "build"]

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"

[tool.nbqa.mutate]
isort = 1
black = 1
pyupgrade = 1

[tool.nbqa.addopts]
pyupgrade = ["--py36-plus"]

[tool.nbqa.files]
isort = "^notebooks/"
black = "^notebooks/"
flake8 = "^notebooks/"
mypy = "^notebooks/"
pydocstyle = "^notebooks/"
pyupgrade = "^notebooks/"

[tool.bandit]
targets = ["src"]
# (optional) list included test IDs here, eg '[B101, B406]':
tests = ["B201", "B301"]
# (optional) list skipped test IDs here, eg '[B101, B406]':
skips = ["B101", "B601"]

[tool.bandit.assert_used]
exclude = ["*_test.py", "test_*.py"]

# TODO
# https://github.com/terrencepreilly/darglint/issues/130

[tool.cruft]
skip = [".git"]

[tool.commitizen]
name = "cz_bitbucket_jira_conventional"
jira_base_url = "https://jira.fraunhofer.pt"
bitbucket_repo = "generativezoo"
bitbucket_project = "GenerativeZoo"
version = "0.0.0"
tag_format = "v$version"
version_files = [
    "setup.py",
    "pyproject.toml:version",
    "VERSION"
]
bump_message = "release $current_version → $new_version [skip-ci]"
update_changelog_on_bump = true
changelog_incremental = true
unreleased_version = "v1.0.0"
annotated_tag = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
